--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "http": "0.0.0",
+    "mongoose": "^5.4.9",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
