--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "node",
+  "proxy": "http://localhost:5000/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dd-trace": "^0.10.2",
     "express": "^4.16.4",
     "http": "0.0.0",
     "mongoose": "^5.4.9",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.8",
     "socket.io": "^2.2.0"
   },
   "scripts": {
